# mailing_service

./: .env  .gitignore  Dockerfile  README.md  dev_env.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
config/nginx/conf.d/: mailing_service.conf
core/: admin.py  models.py  urls.py  views.py
core/management/commands/: create_sample_data.py  send_dispatches.py  test_dispatch.py
core/migrations/: 0001_initial.py  0002_footer_title.py  0003_scheduler.py  0004_next_due_at_field.py  0005_scheduler_update.py  0006_sent_times_field.py
core/tests/: dispatch.py  factories.py  test_models.py  tests.py
mailing_service/: settings.py  utils.py
mailing_service/static/css/: main.css
mailing_service/static/js/: real_time_stats.js
mailing_service/templates/: base.html
mailing_service/templates/core/: dispatch_detail.html  dispatch_list.html
