[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = "This is a service to create and manage mailing lists."
authors = ["Artur <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
